# LibraryManagementSystem

./: CMakeLists.txt  READMD.md  README.md
assets/: lms.puml  spec.md
inc/: CBook.h
src/: CBook.cpp  main.cpp
